# prayer

./: .gitignore  Documentaion.md  PrayerPlayer-mac.spec  PrayerPlayer.spec  Readme.md  Req.md  adhan_gui.py  adhan_gui_pyside.py  app_workflow.md  build.py  build_ubuntu_deb.sh  dev-steps.md  documentation.md  err.md  improvements.md  improvements.txt  installer.py  pytest.ini  relations.md  requirements-dev.txt  requirements.txt  setup.cfg  setup_gui.py  setup_linux.sh  setup_macos.sh  setup_windows.ps1  test.cw.yaml  test_adhan_dry_run.py  test_gi.py  uninstall.py  uninstall_linux.sh  uninstall_macos.sh  uninstall_windows.ps1
.github/workflows/: build-common.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  build.yml  (+2 more)
deployment/: prayer-player.plist
docs/: 01-installation.md  02-configuration.md  03-usage.md  04-for-developers.md
src/: Readme.md  __init__.py  __main__.py  actions.py  actions_executor.py  adhan_player.py  calendar_utils.py  config.py  exceptions.py  focus_steps.py  focus_steps_view.py  gui.py  prayer_times.py  qt_utils.py  scheduler.py  state.py  test_adhan_player.py  tray_icon.py
tests/: README.md  conftest.py  test_actions.py  test_calendar_integration_prompt.py  test_config.py  test_config_service.py  test_focus_steps.py  test_focus_steps_presenter.py  test_google_auth.py  test_google_calendar_service.py  test_gui.py  test_integration.py  test_notification_service.py  test_prayer_times.py  test_prayer_times_integration.py  test_scheduler.py  test_scheduler_unit.py  test_service_manager.py  test_settings_window.py  test_tray_icon.py
(+44 files in other folders)
