[metadata]
name = prayer-player
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = An adhan player and scheduler.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/your-repo/prayer-player
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    APScheduler==3.11.0
    certifi==2025.4.26
    charset-normalizer==3.4.2
    idna==3.10
    iniconfig==2.1.0
    packaging==25.0
    pluggy==1.6.0
    requests==2.32.3
    tzlocal==5.3.1
    urllib3==2.4.0
    intervaltree
    # Add other dependencies from requirements.txt here

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    prayer-player = prayer.__main__:main

[options.package_data]
prayer = assets/*
